<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#f3f3f3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <RelativeLayout
                android:id="@+id/video_plugin_authorization_main_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/video_plugin_facebook_button_background"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/video_plugin_facebook_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="60dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/romanblack_video_login_with_facebook"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/video_plugin_authorization_main_twitter_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/video_plugin_twitter_button_background"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/video_plugin_twitter_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="60dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/romanblack_video_login_with_twitter"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/video_plugin_video_white_round"
                android:gravity="center"
                android:lines="1"
                android:text="@string/romanblack_video_or"
                android:textColor="#66000000"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/video_plugin_authorization_main_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/video_plugin_row_first_dark"
                android:gravity="center_vertical"
                android:hint="@string/romanblack_video_login"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="#66000000"
                android:textColorHint="#66000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/video_plugin_authorization_main_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/video_plugin_row_last_dark"
                android:gravity="center_vertical"
                android:hint="@string/romanblack_video_password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="#66000000"
                android:textColorHint="#66000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/video_plugin_authorization_main_sign_up_label"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/video_plugin_video_sign_up_btn_bg"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/romanblack_video_sign_up"
                android:textColor="#444444"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/video_plugin_authorization_main_email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/video_plugin_authorization_main_email_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/romanblack_video_have_an_account"
                    android:textColor="#555555"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
