<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/video_plugin_video_action_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:background="@drawable/video_plugin_iphone_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/video_plugin_email_sign_up_main_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:text="@string/back" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/romanblack_video_login"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:background="@drawable/video_plugin_iphone_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/video_plugin_email_sign_up_main_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:text="@string/signup" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#f3f3f3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f3f3f3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/video_plugin_email_sign_up_first_name"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:lines="1"
                android:singleLine="true"
                android:textColor="#66000000" />

            <EditText
                android:id="@+id/video_plugin_email_sign_up_last_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:lines="1"
                android:singleLine="true"
                android:textColor="#66000000" />

            <EditText
                android:id="@+id/video_plugin_email_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="#66000000" />

            <EditText
                android:id="@+id/video_plugin_email_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:textColor="#66000000" />

            <EditText
                android:id="@+id/video_plugin_email_sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textPassword"
                android:textColor="#66000000" />

            <LinearLayout
                android:id="@+id/video_plugin_email_sign_up_terms_layout"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/romanblack_video_emailsignup_terms" />

                <CheckBox
                    android:id="@+id/video_plugin_email_sign_up_terms_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
