<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/romanblack_video_send_message_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#000000">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="5dp">

        <EditText android:id="@+id/romanblack_video_sendmessage_edittext"
                  android:layout_weight="1"
                  android:textColor="#66000000"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/message_edittext"
                  android:padding="5dp"
                  android:gravity="top"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:background="#99000000"
                    android:paddingTop="18dp"
                    android:paddingBottom="8dp"
                    android:gravity="right">

        <ProgressBar android:id="@+id/symbol_bytes_progress"
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
                     android:minHeight="5dp"
                     android:maxHeight="5dp"
                     android:max="150"
                     style="?android:attr/progressBarStyleHorizontal"/>

    </RelativeLayout>

    <LinearLayout android:id="@+id/romanblack_video_sendmessage_bottombar"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:background="#99000000"
                  android:gravity="center_vertical"
                  android:paddingBottom="7dp"
                  android:paddingLeft="5dp"
                  android:paddingRight="5dp">

        <TextView android:id="@+id/romanblack_fanwall_sendmessage_cancelbtn"
                  android:layout_height="26dp"
                  android:layout_width="wrap_content"
                  android:layout_marginRight="5dp"
                  android:layout_marginLeft="5dp"
                  android:text="@string/cancel"
                  android:layout_gravity="center_vertical"
                  android:gravity="center"
                  android:textSize="12sp"
                  android:paddingLeft="5dp"/>

        <!--<RelativeLayout android:layout_height="27dp"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:layout_marginLeft="5dp" -->
                        <!--android:layout_marginRight="5dp">-->

            <!--<TextView android:id="@+id/romanblack_fanwall_sendmessage_cancelbtn"-->
                      <!--android:layout_height="26dp"-->
                      <!--android:layout_width="wrap_content"-->
                      <!--android:layout_marginRight="5dp"-->
                      <!--android:text="@string/cancel"-->
                      <!--android:gravity="center"-->
                      <!--android:textSize="12sp"-->
                      <!--android:paddingLeft="5dp"/>-->
            <!---->
        <!--</RelativeLayout>-->

        <TextView android:id="@+id/romanblack_fanwall_sendmessage_clear_btn"
                  android:layout_height="26dp"
                  android:layout_width="wrap_content"
                  android:text="@string/common_clean_upper"
                  android:gravity="center"
                  android:layout_gravity="center_vertical"
                  android:textSize="12sp"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:paddingLeft="5dp"
                  android:paddingRight="5dp"/>

        <!--<RelativeLayout android:layout_height="27dp"-->
                      <!--android:layout_width="wrap_content"-->
                      <!--android:gravity="center_vertical"-->
                      <!--android:layout_marginLeft="5dp" -->
                      <!--android:layout_marginRight="5dp">-->

            <!--<TextView android:id="@+id/romanblack_fanwall_sendmessage_clear_btn"-->
                      <!--android:layout_height="26dp"-->
                      <!--android:layout_width="wrap_content"-->
                      <!--android:text="@string/common_clean_upper"-->
                      <!--android:gravity="center"-->
                      <!--android:textSize="12sp"-->
                      <!--android:paddingLeft="5dp"-->
                      <!--android:paddingRight="5dp"/>-->
            <!---->
        <!--</RelativeLayout>-->

        <RelativeLayout
                android:layout_height="27dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="right|center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            <!--<TextView android:id="@+id/romanblack_fanwall_sendmessage_symbols_counter"-->
                      <!--android:layout_height="50dp"-->
                      <!--android:text="@string/zero_div_150"-->
                      <!--android:layout_width="0dp"-->
                      <!--android:layout_weight="1"-->
                      <!--android:textColor="#ffffff"-->
                      <!--android:visibility="gone"-->
                      <!--android:gravity="center"-->
                      <!--android:textSize="12sp"/>-->

            <TextView android:id="@+id/romanblack_fanwall_sendmessage_post_btn"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:paddingTop="0dp"
                      android:text="@string/post"
                      android:textSize="12sp"
                      android:paddingLeft="5dp"
                      android:paddingRight="5dp"
                      android:gravity="center"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
